@@ -1,3 +1,11 @@
+2012-05-21  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclFileName.c:	When using Tcl_SetObjLength() calls to grow
+	* generic/tclIOUtil.c:	and shrink the objPtr->bytes buffer, care must be
+	taken that the value cannot possibly become pure Unicode.  Calling
+	Tcl_AppendToObj() has the possibility of making such a conversion.  Bug
+	found while valgrinding the trunk.
+
 2012-05-17  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/expr.n: [Bug 3525462]: Corrected statement about what happens
